Blender 2.8 crashes in Grease Pencil Edit mode when adding Annotation #59248

Closed
opened 2018-12-12 15:33:42 +01:00 by artem ivanov · 4 comments

System Information
Operating system: Windows 10
Graphics card: GTX 1070

Blender Version
Broken: 2.80, 16fc62e15f, blender2.8, 2018-12-12 01:18, as found on the splash screen

Short description of error
Blender 2.80 crashes when adding annotation in Grease Pencil Edit mode via shortcut (D + Left Mouse Button)

Exact steps for others to reproduce the error

  • Open Blender 2.8
  • Add -> Grease Pencil -> Stroke
  • Switch to Edit mode
  • Add annotation via shortcut D + Left Mouse Button
  • Crash
**System Information** Operating system: Windows 10 Graphics card: GTX 1070 **Blender Version** Broken: 2.80, 16fc62e15f0, blender2.8, 2018-12-12 01:18, as found on the splash screen **Short description of error** Blender 2.80 crashes when adding annotation in Grease Pencil Edit mode via shortcut (D + Left Mouse Button) **Exact steps for others to reproduce the error** - Open Blender 2.8 - Add -> Grease Pencil -> Stroke - Switch to **Edit mode** - Add annotation via shortcut **D + Left Mouse Button** - Crash
Author

Added subscriber: @ixd

Added subscriber: @ixd
Member

Added subscriber: @antoniov

Added subscriber: @antoniov
Antonio Vazquez self-assigned this 2018-12-12 19:12:45 +01:00

This issue was referenced by 9c5d104224

This issue was referenced by 9c5d1042244e833704cad5b50ab89c7792448f33

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#59248
No description provided.