Fix T59248: Crash in Grease Pencil Edit mode when adding Annotation